[gd_scene load_steps=2 format=3 uid="uid://cxcx47k10xyv1"]

[ext_resource type="Script" uid="uid://bck4hsmquwrf0" path="res://scenes/main_menu/menu_controller.gd" id="1_v0kjy"]

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v0kjy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LogoutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
